# voice_recognition_package

./: CMakeLists.txt  README.md  package.xml  setup.py
launch/: detector.launch  memory.launch  pocketsphinx.launch  voice_control.launch  voice_pose.launch  voicetest.launch
model/: RJ.dic  RJ.lm  corpus.txt
msg/: memory.msg
src/: detector.py  memory.py  poses.py  test.py  trajectory.py  vector_operations.py  voice_control.py  voice_pose.py  voice_trajectory.py  voicetest.py  words.py
